--- a/package.json
+++ b/package.json
@@ -26,7 +26,12 @@
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
+    "faker": "^6.6.6",
     "mysql2": "^2.3.3",
+    "pg": "^8.8.0",
     "sequelize": "^6.21.4"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.4.1"
   }
 }
